# RA2_inverse_model_CMC

./: .gitignore  README.md  analyze_acceptance_prior_v2.py  code_to_run.txt  compare_hybrid_models_v2.py  install_sensitivity_module.sh  matplotlibrc  plot_leadfield_figures.py  practice_cmc.ipynb  pyproject.toml  regenerate_supp_sensitivity_figs.py  reproduce_morlet_all.sh  requirements.txt  requirements_testing.txt  tools_audit_morlet.py  trace_repo_lineage.py
config/: n_templates.json
data/: feature_tokens.py  generate_cmc_dataset.py  generate_dataset.py  make_splits.py  prepare_training_data.py  priors.py  splits.py
eval/: compare_feature_sets.py  evaluate_ensemble.py  evaluate_ensemble.py.bak_before_diag_patch  evaluate_ensemble.py.bak_before_lambda_safe_mode  evaluate_ensemble.py.bak_before_lambda_tf_globals  evaluate_ensemble.py.bak_before_noparamtoken_rebuild  generalization_sweeps.py  make_manuscript_figures.py  make_prof_bundle.py  plot_arch_compare.py  plot_reliability.py  plot_results.py  plot_sbc.py  ppc.py  qc_forward.py  qc_tokens.py
models/: __init__.py  bilstm_baseline.py  bilstm_baseline.py.bak_20260214_121446  param_transforms.py  posterior_fullcov.py  train.py  train.py.bak_20260214_121446  train_config.py  transformer_noparamtoken.py  transformer_noparamtoken.py.bak_before_boolfix  transformer_paramtoken.py
scripts/: neurips_upgrades.py  reproduce_all.sh  run_phase4_matrix.sh  snpe_ppc.py
sensitivity/: __init__.py  common.py  compare_to_recoverability.py  config_sensitivity.yaml  forward_wrapper.py  plotting.py  run_morris.py  run_sobol.py  sampling.py  summarize_outputs.py
sim/: __init__.py  cmc_simulator.py  leadfield_mne.py  regime_filter.py  simulate_eeg.py  stimulus.py
tests/: test_evaluate_ensemble.py  (+7 more)
(+2 files in other folders)
